--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dompurify": "^3.2.6",
     "lucide-react": "^0.516.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-d3-speedometer": "^3.1.1",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-use-gesture": "^9.1.3",
     "recharts": "^2.15.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
